WP-9065 desktop width 1200 - 1320px spacing issue related code changes

--- a/css/style.css
+++ b/css/style.css
@@ -8180,6 +8180,12 @@ input.signup-submit:hover {
     padding-top: 25px;
   }
 }
+@media (min-width: 75em) and (max-width: 82.5em) {
+  #gsb-footer-one #block-gsb-public-custom-blocks-gpcb-follow-us {
+    width: 41%;
+    margin-right: -3%;
+  }
+}
 #gsb-footer-one #block-gsb-public-custom-blocks-gpcb-follow-us h2 {
   float: left;
   padding-right: 45px;
