--- a/sass/partials/design/_footer.sass
+++ b/sass/partials/design/_footer.sass
@@ -515,6 +515,9 @@ input.signup-submit
     +breakpoint($bp-tablet-pot)
       padding-bottom: 15px
       padding-top: 25px
+    +breakpoint($bp-desktop-custom-width)
+      width: 41%
+      margin-right: -3%
     h2
       float: left
       padding-right: 45px
